# SearchAlgosQt

./: .gitignore  CMakeLists.txt  LICENSE_Qt-LGPL.txt  README.md
.github/workflows/: windows.yml
src/: CMakeLists.txt  main.cpp  search_service.cpp  search_service.h
src/models/: CMakeLists.txt  cell_flags.h  map_data.h  models.h  node.h  retval.h  scenario.h
src/scenario_service/: CMakeLists.txt  filereader.cpp  filereader.h  scenario.h  scenario_service.cpp  scenario_service.h
src/search_service/: CMakeLists.txt  astar_thread.cpp  astar_thread.h  old_worker.cpp  old_worker.h  search_service.cpp  search_service.h  search_thread.h  worker.cpp  worker.h
src/search_tools/: CMakeLists.txt  adjust.cpp  adjust.h  children.cpp  children.h  heuristics.cpp  heuristics.h  search_tools.h  timered.h
src/searches/: CMakeLists.txt  astar_search.cpp  astar_search.h  astar_with_callbacks.cpp  astar_with_callbacks.h  astar_with_signals.cpp  astar_with_signals.h  data_structure.h  dll.h  fringe_dll_cached_h.cpp  fringe_dll_version.cpp  fringe_dll_version.h  fringe_search.cpp  fringe_search.h  fringe_with_cached_h.cpp  fringe_with_dll.cpp  fringe_with_dll.h  fringe_with_linked_map_pairs.cpp  fringe_with_linked_map_pairs.h  fringe_with_linked_pair_map.cpp  fringe_with_linked_pair_map.h  linked_map_pairs.cpp  linked_map_pairs.h  linked_map_pairs_old.cpp  linked_map_pairs_older.cpp  linked_map_pairs_v2.cpp  linked_pair_map.cpp  linked_pair_map.h  linked_pair_map_old_and_broken.cpp  linked_pair_map_with_prints.cpp  linknode.h  searches.h  tester  version_dll.cpp  version_dll.h
src/searches/common/: CMakeLists.txt  children.h
src/shared_search_tools/: CMakeLists.txt  adjust.cpp  adjust.h  heuristics.h
src/tools/: CMakeLists.txt  conversions.cpp  conversions.h  exceptions.cpp  exceptions.h  search_signals.h  tools.h
src/ui/: CMakeLists.txt  bucket_tab.cpp  bucket_tab.h  file_selection.cpp  file_selection.h  fullscreenDialog.cpp  fullscreenDialog.h  graphics_image_item.cpp  graphics_image_item.h  map_scene.cpp  map_scene.h  map_widget.cpp  map_widget.h  scenario_controls.cpp  scenario_controls.h  search_tabs.cpp  search_tabs.h  tabwindow.cpp  tabwindow.h  testbed_tab.cpp  testbed_tab.h  ui.cpp  ui.h  visual_search_tab.cpp  visual_search_tab.h
tests/: CMakeLists.txt  children_corner_test.cpp  children_test.cpp  linked_map_pairs_add_tail_test.cpp  linked_map_pairs_iterator_test.cpp  linked_map_pairs_remove_current_test.cpp  linked_pair_map_test.cpp  test_heuristics.cpp
tests/search/data_structs/: add_tail_test.cpp
tests/utils/: CMakeLists.txt  test_utils.h  travel_fringe.cpp  travel_fringe.h
